2012-12-08  Xan Lopez  <xlopez@igalia.com>

        Build fix after r137003. Wrap Microdata only sections with ENABLE(MICRODATA).

        * dom/NodeRareData.h:
        (NodeRareData):

2012-12-08  Ryosuke Niwa  <rniwa@webkit.org>

        Build fix after r137003. Wrap NodeMutationObserverData with ENABLE(MUTATION_OBSERVERS).

        * dom/NodeRareData.h:
        (NodeRareData):

2012-12-08  Patrick Gansterer  <paroga@webkit.org>

        Build fix for ENABLE(SVG) && !ENABLE(FILTERS) after r136975.

        * rendering/svg/SVGResources.cpp:
        (WebCore::SVGResources::buildCachedResources):

2012-12-08  Adam Klein  <adamk@chromium.org>

        HTMLTemplateElement.innerHTML should be parsed into the template contents owner document
        https://bugs.webkit.org/show_bug.cgi?id=104407

        Reviewed by Eric Seidel.

        When parsing via innerHTML, ensure that all operations (including the
        initial fragment creation) occur in the proper document to avoid,
        e.g., images loading while being parsed into the template contents.
        This matches the parsing behavior during page load.

        Test: fast/dom/HTMLTemplateElement/innerHTML-inert.html

        * editing/markup.cpp:
        (WebCore::createFragmentForInnerOuterHTML):

2012-12-08  ChangSeok Oh  <shivamidow@gmail.com>

        Assertion failed at WebCore::RedirectedXCompositeWindow::context()
        https://bugs.webkit.org/show_bug.cgi?id=104349

        Reviewed by Martin Robinson.

        We should return GLContext if m_needsContext is CreateGLContext. By the way
        CreateGLContext is a enum value and its default value is 0. So checking
        ASSERT(m_needsContext) causes a crash on debug build.
        ASSERT(m_needsContext == CreateGLContext) is better here.

        No new tests since we can verify this with already existing AC tests.

        * platform/gtk/RedirectedXCompositeWindow.cpp:
        (WebCore::RedirectedXCompositeWindow::context):
